--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vinyl-destination-v1",
+  "name": "vinyl-destination-v2",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,20 +7,22 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:VinylDestinationV1": "node dist/vinyl-destination-v1/server/server.mjs"
+    "serve:ssr:VinylDestinationV2": "node dist/vinyl-destination-v2/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.0",
-    "@angular/common": "^17.1.0",
-    "@angular/compiler": "^17.1.0",
-    "@angular/core": "^17.1.0",
-    "@angular/forms": "^17.1.0",
-    "@angular/platform-browser": "^17.1.0",
-    "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/platform-server": "^17.1.0",
-    "@angular/router": "^17.1.0",
-    "@angular/ssr": "^17.1.1",
+    "@angular/animations": "^17.2.0",
+    "@angular/common": "^17.2.0",
+    "@angular/compiler": "^17.2.0",
+    "@angular/core": "^17.2.0",
+    "@angular/forms": "^17.2.0",
+    "@angular/platform-browser": "^17.2.0",
+    "@angular/platform-browser-dynamic": "^17.2.0",
+    "@angular/platform-server": "^17.2.0",
+    "@angular/router": "^17.2.0",
+    "@angular/ssr": "^17.2.0",
+    "@aws-amplify/ui-angular": "^5.0.10",
+    "aws-amplify": "^6.0.17",
     "aws-amplify-angular": "^6.0.60",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
@@ -28,9 +30,9 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
-    "@angular/compiler-cli": "^17.1.0",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "^17.2.0",
+    "@angular/compiler-cli": "^17.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
