--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,17 +2,22 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "resolveJsonModule": true,
     "outDir": "./out-tsc/app",
     "types": [
       "node"
     ]
   },
   "files": [
+    "src/polyfills.ts",
     "src/main.ts",
     "src/main.server.ts",
     "server.ts"
   ],
   "include": [
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "**/*.spec.ts"
   ]
 }
